; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_checkout.c_conflict_entry_name.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_checkout.c_conflict_entry_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*)* @conflict_entry_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @conflict_entry_name(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = call i64 @git_buf_puts(i32* %8, i8* %9)
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %21, label %12

12:                                               ; preds = %3
  %13 = load i32*, i32** %5, align 8
  %14 = call i64 @git_buf_putc(i32* %13, i8 signext 58)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %21, label %16

16:                                               ; preds = %12
  %17 = load i32*, i32** %5, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = call i64 @git_buf_puts(i32* %17, i8* %18)
  %20 = icmp slt i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %16, %12, %3
  store i32 -1, i32* %4, align 4
  br label %23

22:                                               ; preds = %16
  store i32 0, i32* %4, align 4
  br label %23

23:                                               ; preds = %22, %21
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i64 @git_buf_puts(i32*, i8*) #1

declare dso_local i64 @git_buf_putc(i32*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
